--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
-title                    : "Your Name / Site Title"
+locale                   : "zh-cn"
+title                    : "FlyMoon's Personal Blog"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &月下萤火"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "月下萤火"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  location         : "广东"
+  employer         : "某某中学城东学校"
+  uri              : # https://flymoon-evo.github.io/
+  email            : "chenan.oc@qq.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
