--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "zh-cn"
 title                    : "FlyMoon's Personal Blog"
 title_separator          : "-"
-name                     : &"月下萤火"
+name                     : &name "FlyMoon"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
