--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "FlyMoon-evo/FlyMoon.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "月下萤火"
+  name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
-  bio              : "我想要的很简单，时光还在你还在"
-  location         : "Guangdong,China"
-  employer         : "某某中学城东学校"
+  bio              : "Short biography for the left-hand sidebar"
+  location         : "Earth"
+  employer         : "Red Brick University"
   uri              : # URL
-  email            : "chenan.oc@qq.com" 
+  email            : "none@example.org" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
