--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "FlyMoon's Personal Blog"
 title_separator          : "-"
 name                     : &name "月下萤火"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://flymoon-evo.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "FlyMoon.github.io"
+repository               : "FlyMoon-evo/FlyMoon.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
