--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
+locale                   : "zh-cn"
 title                    : "FlyMoon's Personal Blog"
 title_separator          : "-"
 name                     : &name "月下萤火"
