--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "project"
     url: /publications/
 
-  - #title: "Talks"
+  #- title: "Talks"
     #url: /talks/    
 
   #- title: "Teaching"
