--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
 
 main:
   - title: "Project"
-    url: /Project/
+    url: https://github.com/FlyMoon-evo
 
   #- title: "Talks"
     #url: /talks/    
