--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "月下萤火"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Dare to try, means you have already taken the first step to success."
   location         : "广东"
   employer         : "某某中学城东学校"
   uri              : # https://flymoon-evo.github.io/
